feat!: implement mono-tenant crud services